monitoring/20-zabbix/zabbix-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  labels:
    app: zabbix-server
spec:
  selector:
    app: zabbix-server
  ports:
    - name: zabbix
      port: 10051
      targetPort: 10051
  type: ClusterIP
