monitoring/20-zabbix/zabbix-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  labels:
    app: zabbix-web
spec:
  selector:
    app: zabbix-web
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
